--- a/noise.css
+++ b/noise.css
@@ -4,3 +4,23 @@ body{
   font-family: 'Staatliches', cursive;
   color: #ffffff;
 }
+
+.city {
+  border: none;
+  background-color: inherit;
+  padding: 14px 28px;
+  font-size: 16px;
+  cursor: pointer;
+  display: inline-block;
+  text-decoration: none;
+  color: #ffffff;
+}
+
+/* On mouse-over */
+.city:hover {background: #eee;}
+
+.success {color: green;}
+.info {color: dodgerblue;}
+.warning {color: orange;}
+.danger {color: red;}
+.default {color: black;}
